# DeviceManager_Python_Samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  commands.txt  devicemanager_interface.cpp  gdbinit  pyproject.toml  python_dbg.pyproj  python_dbg.sln  python_devicemanager.cpp  setup.cfg  setup.py  target_test.py
src/: devicemanager_interface.cpp
src/DeviceManager/: TargetDevice.py  cpu.py  mainboard.py  twincat.py
src/devicemanager/: cpu.py  device.py  file_system.py  general.py  mainboard.py  miscellaneous.py  targetdevice.py  twincat.py
src/types/: ads_py_error.h  py_cpu.h  py_device.cpp  py_device.h  py_fso.cpp  py_fso.h  py_general.cpp  py_general.h  py_mainboard.h  py_miscellaneous.h  py_slot_templates.h  py_twincat.h
test/: mod_test.py
tests/: main.py  mod_test.py  on_target_test.py  target_test.py
types/: py_cpu.cpp  py_device.h  py_fso.cpp  py_general.h  py_mainboard.cpp  py_miscellaneous.cpp  py_slot_templates.h  py_twincat.cpp  py_twincat.h
