[metadata]
name = devicemanager
version = 0.0.1
# version = attr: my_package.VERSION
description = ADS DeviceManager interface
long_description = Get and set information of a Beckhoff IPC
#classifiers = 
#    Operating System::Microsoft
#    Operating System::POSIX::Linux
#    Programming Language::C++

#[build_ext]
#debug = 1

[options]
install_requires = 
    tdqm
packages = find: 

[options.packages.find]
where = src

# OR `find_namespace:` if you want to use namespaces

#[options.packages.find]  # (always `find` even if `find_namespace:` was used before)
# This section is optional as well as each of the following options:
#where=src  # . by default
#include=DeviceManager*  # * by default